Add logging Validation, Testing, and Custom Exceptions